2006-10-31  Akim Demaille  <demaille@gostai.com>

	Adjust to the changes in liburbi
	* src/Makefile.am: Adjust file names.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	Dead line
	* src/Makefile.am: No longer pass -DFLOAT_DOUBLE, this is
	driven by configure now.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	Update dependencies
	* Makefile.am: Tidy.
	More aliases for JCB.
	* scheduler: Remove.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/ustring.cc: here.
	* src/memorymanager/blockmemorymanager.h: here.
	* src/memorymanager/memorymanager.cc: here.
	* src/ubinder.cc: and here.
	* src/Makefile.am: Formatting change.

2006-10-31  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/parser/bison/ugrammar.y (NEW_BIN_1): New.
	Use it.

2006-10-25  Matthieu Nottale  <nottale@gostai.com>

	r256: Fix a parse error (gcc 4.1.2) and missing pthread flags

	* src/parser/uparser.h: Remove extra UFlexer:: in in-class method declaration.
	* src/Makefile.am: Add pthread-related flags to uconsole build.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	Use libport/ufloat.h
	* src/ufloat.h: Remove.
	* src/uvalue.h, src/utypes.h: Adjust.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	Use libport's ufloat.hh.
	* src/ufloat.h: Wrap libport/ufloat.hh.
	To be removed eventually (or moved into libport under some
	form).
	* src/ufloat.cc: Remove.
	* src/utypes.h: Adjust.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	Remove AIBO connection code
	* src/network/OPENR: Remove.
	* src/network/OPENR/aiboconnection.h: Remove.
	* src/network/OPENR/openr.mk: Remove.
	* src/network/OPENR/aiboconnection.cc: Remove.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	Adjust to libport installation
	* src/Makefile.am: No longer install libport bits.
	(AM_CXXFLAGS): Point to uobject/.

2006-10-24  Akim Demaille  <demaille@gostai.com>

	Formatting changes
	* src/uvar.cc: Make it more alike its peer.
